Package now has start script

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "dependencies": {
     "angular": "^1.5.7",
     "express": "^4.14.0"
+  },
+  "scripts": {
+    "start": "node main.js"
   }
 }
